# cron_analyser

./: .gitignore  .magento.app.yaml  README.md  app.py  pyproject.toml  requirements.txt
.magento/: routes.yaml  services.yaml
static/css/: styles.css
templates/: index.html
