[tool.poetry]
name = "cron_analyser"
version = "0.1.0"
description = ""
authors = ["Rimom"]
license = "APACHE2"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
redis = "^4.2.2"
PyMySQL = "^1.0.2"
gevent = "^21.12.0"
platformshconfig = "^2.4.0"
openai = "^0.28.0"
python-dotenv = "^1.0.1"
croniter = "^3.0.3"
pandas = "^2.2.2"
plotly = "^5.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
